--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ S3method(predict_raw,"_elnet")
 S3method(predict_raw,"_lognet")
 S3method(predict_raw,"_multnet")
 S3method(predict_raw,model_fit)
+S3method(predict_survival,model_fit)
 S3method(predict_time,model_fit)
 S3method(print,boost_tree)
 S3method(print,control_parsnip)
@@ -151,6 +152,7 @@ export(predict_numeric.model_fit)
 export(predict_quantile.model_fit)
 export(predict_raw)
 export(predict_raw.model_fit)
+export(predict_survival.model_fit)
 export(predict_time)
 export(predict_time.model_fit)
 export(rand_forest)
