--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,7 +103,6 @@ export(.x)
 export(.y)
 export(C5.0_train)
 export(add_rowindex)
-export(as_matrix)
 export(boost_tree)
 export(check_empty_ellipse)
 export(check_final_param)
@@ -131,6 +130,8 @@ export(linear_reg)
 export(logistic_reg)
 export(make_classes)
 export(mars)
+export(maybe_data_frame)
+export(maybe_matrix)
 export(mlp)
 export(model_printer)
 export(multi_predict)
