--- a/NAMESPACE
+++ b/NAMESPACE
@@ -145,6 +145,7 @@ export(new_model_spec)
 export(null_model)
 export(null_value)
 export(nullmodel)
+export(parsnip_addin)
 export(pred_value_template)
 export(predict.model_fit)
 export(predict_class.model_fit)
@@ -189,7 +190,6 @@ export(update_engine_parameters)
 export(update_main_parameters)
 export(varying)
 export(varying_args)
-export(write_parsnip_specs)
 export(xgb_train)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
