--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,7 @@ Imports:
     purrr,
     utils,
     tibble (>= 2.1.1),
-    generics,
+    generics (>= 0.1.0),
     glue,
     magrittr,
     stats,
