--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ S3method(print,nearest_neighbor)
 S3method(print,nullmodel)
 S3method(print,rand_forest)
 S3method(print,surv_reg)
+S3method(print,svm_linear)
 S3method(print,svm_poly)
 S3method(print,svm_rbf)
 S3method(req_pkgs,model_fit)
@@ -74,6 +75,7 @@ S3method(translate,multinom_reg)
 S3method(translate,nearest_neighbor)
 S3method(translate,rand_forest)
 S3method(translate,surv_reg)
+S3method(translate,svm_linear)
 S3method(translate,svm_poly)
 S3method(translate,svm_rbf)
 S3method(type_sum,model_fit)
@@ -88,6 +90,7 @@ S3method(update,multinom_reg)
 S3method(update,nearest_neighbor)
 S3method(update,rand_forest)
 S3method(update,surv_reg)
+S3method(update,svm_linear)
 S3method(update,svm_poly)
 S3method(update,svm_rbf)
 S3method(varying_args,model_spec)
@@ -182,6 +185,7 @@ export(show_fit)
 export(show_model_info)
 export(stan_conf_int)
 export(surv_reg)
+export(svm_linear)
 export(svm_poly)
 export(svm_rbf)
 export(tidy)
