--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -1,6 +1,12 @@
 on:
   push:
-    branches: master
+    branches:
+      - master
+      - main
+  pull_request:
+    branches:
+      - master
+      - main
 
 name: pkgdown
 
@@ -12,9 +18,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: r-lib/actions/setup-r@master
+      - uses: r-lib/actions/setup-r@v1
 
-      - uses: r-lib/actions/setup-pandoc@master
+      - uses: r-lib/actions/setup-pandoc@v1
+
+      - name: System dependencies
+        run: brew install harfbuzz fribidi
 
       - name: Query dependencies
         run: |
@@ -24,7 +33,7 @@ jobs:
         shell: Rscript {0}
 
       - name: Cache R packages
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         with:
           path: ${{ env.R_LIBS_USER }}
           key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-${{ hashFiles('.github/depends.Rds') }}
@@ -36,13 +45,19 @@ jobs:
           remotes::install_github("tidyverse/tidytemplate")
           remotes::install_cran("tidymodels")
           remotes::install_cran("C50")
-          install.packages("pkgdown")
+          install.packages("pkgdown", type = "binary")
         shell: Rscript {0}
 
       - name: Install package
         run: R CMD INSTALL .
 
+      - name: Build site
+        if: github.event_name == 'pull_request'
+        run: |
+          Rscript -e 'pkgdown::build_site()'
+
       - name: Deploy package
+        if: github.event_name == 'push'
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
