--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ S3method(print,nearest_neighbor)
 S3method(print,nullmodel)
 S3method(print,rand_forest)
 S3method(print,surv_reg)
+S3method(print,survival_reg)
 S3method(print,svm_linear)
 S3method(print,svm_poly)
 S3method(print,svm_rbf)
@@ -96,6 +97,7 @@ S3method(update,multinom_reg)
 S3method(update,nearest_neighbor)
 S3method(update,rand_forest)
 S3method(update,surv_reg)
+S3method(update,survival_reg)
 S3method(update,svm_linear)
 S3method(update,svm_poly)
 S3method(update,svm_rbf)
@@ -198,6 +200,7 @@ export(show_fit)
 export(show_model_info)
 export(stan_conf_int)
 export(surv_reg)
+export(survival_reg)
 export(svm_linear)
 export(svm_poly)
 export(svm_rbf)
