--- a/NAMESPACE
+++ b/NAMESPACE
@@ -211,6 +211,7 @@ export(update_main_parameters)
 export(varying)
 export(varying_args)
 export(xgb_train)
+importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_cols)
