--- a/NAMESPACE
+++ b/NAMESPACE
@@ -174,6 +174,7 @@ export(predict_numeric.model_fit)
 export(predict_quantile.model_fit)
 export(predict_raw)
 export(predict_raw.model_fit)
+export(predict_survival)
 export(predict_survival.model_fit)
 export(predict_time)
 export(predict_time.model_fit)
