--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ S3method(req_pkgs,model_fit)
 S3method(req_pkgs,model_spec)
 S3method(required_pkgs,model_fit)
 S3method(required_pkgs,model_spec)
+S3method(tidy,"_LiblineaR")
 S3method(tidy,"_elnet")
 S3method(tidy,"_fishnet")
 S3method(tidy,"_lognet")
