--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -60,7 +60,7 @@ Suggests:
     rpart,
     sparklyr (>= 1.0.0),
     survival,
-    testthat,
+    testthat (>= 3.0.0),
     xgboost (>= 1.5.0.1)
 VignetteBuilder: 
     knitr
@@ -90,3 +90,4 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Config/testthat/edition: 3
