--- a/NAMESPACE
+++ b/NAMESPACE
@@ -219,6 +219,7 @@ export(make_classes)
 export(make_engine_list)
 export(make_seealso_list)
 export(mars)
+export(max_mtry_formula)
 export(maybe_data_frame)
 export(maybe_matrix)
 export(min_cols)
