--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -95,6 +95,7 @@ reference:
       - set_new_model
       - maybe_matrix
       - min_cols
+      - max_mtry_formula
       - required_pkgs
       - required_pkgs.model_spec
       - req_pkgs
