--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -60,7 +60,7 @@ Suggests:
     rpart,
     sparklyr (>= 1.0.0),
     survival,
-    testthat,
+    testthat (>= 3.0.0),
     xgboost (>= 1.5.0.1)
 VignetteBuilder: 
     knitr
@@ -89,4 +89,5 @@ Config/rcmdcheck/ignore-inconsequential-notes: true
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
+Config/testthat/edition: 3
 RoxygenNote: 7.1.2.9000
