--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -94,6 +94,7 @@ reference:
   - title: Developer tools
     contents:
       - contr_one_hot
+      - convert_case_weights
       - set_new_model
       - maybe_matrix
       - min_cols
